Fix z-index shenanigans

--- a/src/index.scss
+++ b/src/index.scss
@@ -51,12 +51,17 @@ code {
   background: transparent;
 
   &:not(.collapsed-layout) {
-    z-index: 1;
+    z-index: 2;
     border: 2px dashed $accent-lite;
 
     &::after {
       opacity: 0;
     }
+  }
+
+  // Adjust z-index during media stacking when switched out rapidly (such as via collection navigation)
+  &:not(.collapsed-layout):not(.active):not(.expanded-layout) {
+    z-index: 1;
   }
 
   &:not(.ready) {
